fix z-index

--- a/src/styles/components/molecules/banner.module.scss
+++ b/src/styles/components/molecules/banner.module.scss
@@ -30,6 +30,7 @@
   .a-button {
     max-width: 10.5rem;
     margin-top: 0.5rem;
+    z-index: $zindex-float-button;
   }
 
   h1 {
